fixed text overlaping in podcast details page

--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -855,7 +855,7 @@ twitter-widget {
 
 #hits {
   position: absolute;
-  z-index: 2;
+  z-index: 3;
 }
 
 .ais-SearchBox-input::-ms-clear,
